# structuralglass

./: .gitignore  CHANGELOG.rst  FourSidedGlassCalc.py  GlassTypes.py  LICENSE  MANIFEST.in  README.md  UnitTests.py  example.py  example_1.py  example_2.py  example_3.py  pyproject.toml  setup.cfg  unitTests.py
docs/: conf.py  index.rst  requirements_docs.txt
docs/rst/: api.rst  contributing.rst  demands.rst  documentation.rst  equiv_thick_models.rst  glass_types.rst  installation.rst  layers.rst
examples/: example_1.py  example_2.py  example_3.py
structuralglass/: __init__.py  demands.py  equiv_thick_models.py  glass_types.py  helpers.py  layers.py
structuralglass/examples/: example_2.py
structuralglass/resources/: unit_def.txt
test/: unittests.py
