[metadata]
name = structuralglass
version = 0.0.1
author = Norman JN Richardson
author_email = normanrichardson@gmail.com
description = A python package for the structural analysis of glass.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/normanrichardson/StructGlassCalcs
project_urls =
    Bug Tracker = https://github.com/normanrichardson/StructGlassCalcs/issues
license = MIT License
license_file = LICENSE
platform = Any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.8
install_requires = 
    pint~=0.17
    scipy~=1.7.0
    numpy~=1.21.1
include_package_data = True

[options.extras_require]
dev = 
    Sphinx
    sphinx-rtd-theme
    black
    isort
    flake8
    
dist = 
    twine
    build

[options.packages.find]
exclude =
    test